# fi-neuroevolution

./: .gitignore  AITesting.py  EVONeatAI.py  README.md  config-fightingice  fightingice-evo.properties  par-test.py  requirements.txt  setup.cfg  setup.py
Agent Actions/src/: ActionSwitch.java
FightingICEAgent/: pom.xml
FightingICEAgent/src/main/java/: AgentSocket.java  NEAgent.java
NE Agent/src/: AgentSocket.java  GSONTest.java  NEAgent.java
NEAgent/src/main/java/: AgentSocket.java  NEAgent.java
ahni/: .gitignore
ahni/properties/: fightingice-evo.properties  fightingice-test.properties
ahni/src/com/ojcoleman/ahni/experiments/fightingiceevo/: FightingICEEvolution.java  FightingICETest.java  (+1 more)
fiagent/: __main__.py  visualize.py
fiagent/env/: .fightingice_env.py.swp  __init__.py  action.py  fightingice_env.py  gym_ai.py  utils.py
fiagent/env/agents/: machete.py
fiagent/resources/: neat-config
fightingiceevo/: FightingICEEvolution.java  TestFF.java  fightingice-evo.properties
neatpython-evo/: config-fightingice  fightingice-evo.py  test1.txt
neatpython-evo/exp01/: Digraph.gv  neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-14  neat-checkpoint-19  neat-checkpoint-2  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-3  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44  neat-checkpoint-49  neat-checkpoint-54  neat-checkpoint-59  neat-checkpoint-64  neat-checkpoint-69  neat-checkpoint-74  neat-checkpoint-79  neat-checkpoint-84  neat-checkpoint-89  neat-checkpoint-9  neat-checkpoint-94
src/: Test1.java
