[metadata]
name = FIAgent
url = https://github.com/robbiejdunn/FightingICE-neuroevolution
author = Robbie Dunn
author_email = robbiejdunn94@gmail.com
maintainer = Robbie Dunn
maintainer_email = robbiejdunn94@gmail.com
description = Agent for the FightingICE game

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

